Fix sidebar gap

--- a/src/components/organism/SearchResult/SearchResult.module.scss
+++ b/src/components/organism/SearchResult/SearchResult.module.scss
@@ -6,7 +6,7 @@
 
   .filterAndProducts {
     display: flex;
-    gap: 100px;
+    gap: 90px;
   }
 
   @media (min-width: 1920px) {
